# mysql4redis

./: Makefile.am  README.md  autogen.sh  configure.ac  libmysql2redis.pc.in  libmysql4redis.pc.in
po/: POTFILES.in
src/: Makefile.am  lib_mysqludf_redis.c  lib_mysqludf_redis.h  thread_pool.c  thread_pool.h
src/hiredis/: async.c  dict.c  dict.h  hiredis.c
